Revert "fix: align HoursTable row to the right side"
This reverts commit fda3622fb2a7354601aefe8dbcead158d2fda126.

--- a/packages/pages-components/src/components/hours/hoursTable.css
+++ b/packages/pages-components/src/components/hours/hoursTable.css
@@ -5,9 +5,6 @@ html {
 
 .HoursTable-row {
   display: flex;
-  justify-content: space-between;
-  width: auto;
-  max-width: 100%;
 }
 
 .HoursTable-day {
@@ -18,5 +15,4 @@ html {
   display: flex;
   flex-direction: column;
   flex: 0 0 var(--yxt-hoursTable-col2-width);
-  text-align: right;
 }
